Tag parsing shouldn't be case sensitive. Also added support for optional name attribute declaration.

--- a/example/test-template.tmpl
+++ b/example/test-template.tmpl
@@ -1,7 +1,7 @@
 <h1>Perl Templates proof of concept</h1><br/>
 <br/>
 Output a tmpl_var tag: <tmpl_var name="test1"><br/>
-Output a tmpl_var tag (escaped): <tmpl_var name=test2 escape=html><br/>
+Output a tmpl_var tag (escaped): <TMPL_VAR test2 escape=html><br/>
 <br/>
 <tmpl_if name=if_test>
 This is inside a tmpl_if that should be showing<br/>
